[global]
quiet = 0

[metadata]
name = trand
version = 21.8.5
description='Transcript Distances'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/McIntyre-Lab/TranD
author = McIntyre Lab, Universify of Florida
author_email = om@rc.ufl.edu
license = MIT
keywords = transcript event and distance analysis
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >= 3.7
setup_requires =
    setuptools
install_requires =
    numpy >= 1.18
    pandas >= 1.2.4
    pybedtools >= 0.8
    pysam
    matplotlib
    seaborn == 0.9.0
    loguru
    upsetplot == 0.4.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  trand = trand.main:cli

[aliases]
clean_egg_info = egg_info -Db ""
release = clean_egg_info sdist bdist_wheel
source = register sdist binary
binary = bdist_egg upload --show-response

[upload]
repository = pypitest

[sdist]
formats = gztar

[bdist_wheel]
universal=0

[flake8]
max-line-length = 99
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
